# django-demo-notion

./: .env  docker-compose.yaml  manage.py  pyproject.toml
accounts/: admin.py  apps.py
accounts/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_account_name.py  0004_alter_user_managers.py
accounts/models/: __init__.py  account.py  membership.py  permission.py  role.py  user.py
accounts/views/: __init__.py  account.py  role.py  user.py
documents/: admin.py
documents/migrations/: 0001_initial.py  0002_namespace_account.py  0003_alter_comment_author_alter_comment_document_and_more.py
documents/models/: __init__.py  comment.py  document.py  namespace.py
documents/views/: __init__.py  document.py
notion_clone/: api.py  asgi.py  settings.py  urls.py  wsgi.py
